修改整体架构为模板方法，分离C、cpp、java判题细节

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,9 @@ eureka.instance.lease-expiration-duration-in-seconds=5
 eureka.instance.lease-renewal-interval-in-seconds=5
 eureka.client.serviceUrl.defaultZone=http://localhost/eureka/eureka/
 
-judgePath=/home/kelab/
+judgePath=/home/kelab/workspace
+Cword=gcc main.c -o main
+Crun=./main
+CPPword=g++ main.c -o main
+JavaPword=javac Main.java
+Python2word=python2 
