添加java、c、c++、py2、py3的handler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,14 @@ eureka.instance.lease-expiration-duration-in-seconds=5
 eureka.instance.lease-renewal-interval-in-seconds=5
 eureka.client.serviceUrl.defaultZone=http://localhost/eureka/eureka/
 
-judgePath=/home/kelab/workspace
-Cword=gcc main.c -o main
-Crun=./main
-CPPword=g++ main.c -o main
-JavaPword=javac Main.java
-Python2word=python2 
+judge.scriptPath=G:/online-judge/src/main/resources/judge.py
+judge.judgePath=/home/kelab/workspace
+judge.Cword=gcc PATH/main.c -w -lm -o PATH/main
+judge.CPPword=g++ PATH/main.cpp -w -lm -o PATH/main
+judge.Crun=PATH/main
+judge.Javaword=javac PATH/Main.java
+judge.Javarun=java -classpath PATH Main
+judge.Python2word=python2 -m py_compile PATH/main.py
+judge.Python2run=python2 PATH/main.py
+judge.Python3word=python3 -m py_compile PATH/main.py
+judge.Python3run=python3 PATH/main.py
