配置以Cloud Provider身份启动

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=7071
 #eureka.instance.hostname=localhost
 eureka.instance.lease-expiration-duration-in-seconds=5
 eureka.instance.lease-renewal-interval-in-seconds=5
-eureka.client.serviceUrl.defaultZone=http://localhost/eureka/eureka/
+eureka.client.serviceUrl.defaultZone=http://192.168.0.116/eureka/eureka/
 
 judge.scriptPath=G:/online-judge/src/main/resources/judge.py
 judge.judgePath=/home/kelab/workspace
