添加判题语言js

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,4 @@ judge.Python2word=python2 -m py_compile PATH/main.py
 judge.Python2run=python2 PATH/main.py
 judge.Python3word=python3 -m py_compile PATH/main.py
 judge.Python3run=python3 PATH/main.py
+judge.JSrun=node PATH/main.js
