--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 spring.application.name=judge-provider
-server.port=7071
-#eureka.instance.hostname=localhost
+# server information
+server.port=8080
+eureka.instance.hostname=192.168.0.113
 eureka.instance.lease-expiration-duration-in-seconds=5
 eureka.instance.lease-renewal-interval-in-seconds=5
 eureka.client.serviceUrl.defaultZone=http://192.168.0.116/eureka/eureka/
-
+# judge script path
 judge.scriptPath=G:/online-judge/src/main/resources/judge.py
-judge.judgePath=/home/kelab/workspace
+# workspace
+judge.judgePath=/tmp/OnlineJudgeWorkspace
 judge.Cword=gcc PATH/main.c -w -lm -o PATH/main
 judge.CPPword=g++ PATH/main.cpp -w -lm -o PATH/main
 judge.Crun=PATH/main
