--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-spring.application.name=judge-provider
 # server information
-server.port=8080
-eureka.instance.hostname=192.168.0.113
-eureka.instance.lease-expiration-duration-in-seconds=5
-eureka.instance.lease-renewal-interval-in-seconds=5
-eureka.client.serviceUrl.defaultZone=http://192.168.0.116/eureka/eureka/
+#spring.application.name=judge-provider
+#server.port=8080
+#eureka.instance.hostname=192.168.0.113
+#eureka.instance.lease-expiration-duration-in-seconds=5
+#eureka.instance.lease-renewal-interval-in-seconds=5
+#eureka.client.serviceUrl.defaultZone=http://192.168.0.116/eureka/eureka/
 # judge script path
-judge.scriptPath=G:/online-judge/src/main/resources/judge.py
+judge.scriptPath=/root/judge.py
 # workspace
 judge.judgePath=/tmp/OnlineJudgeWorkspace
 judge.Cword=gcc PATH/main.c -w -lm -o PATH/main
