--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,5 @@
 ### 设置###
-log4j.level=INFO
-log4j.rootLogger=D,E,I
+log4j.rootLogger=info,stdout
 ##### 输出信息到控制抬 ###
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target = System.out
