--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,16 @@
 judge.scriptPath=/root/judge.py
 # workspace
 judge.judgePath=/tmp/OnlineJudgeWorkspace
-judge.Cword=gcc PATH/main.c -w -lm -o PATH/main
-judge.CPPword=g++ PATH/main.cpp -w -lm -o PATH/main
+# GCC
+judge.GNUC11=gcc -lm -w -O3 -std=gnu11 PATH/main.c -o PATH/main
+judge.GNUC99=gcc -lm -w -O3 -std=gnu99 PATH/main.c -o PATH/main
+judge.GNUC90=gcc -lm -w -O3 -std=gnu11 PATH/main.c -o PATH/main
+# G++
+judge.GNUCPP98=g++ -lm -w -O3 -std=gnu++98 PATH/main.c -o PATH/main
+judge.GNUCPP11=g++ -lm -w -O3 -std=gnu++11 PATH/main.c -o PATH/main
+judge.GNUCPP14=g++ -lm -w -O3 -std=gnu++14 PATH/main.c -o PATH/main
+judge.GNUCPP17=g++ -lm -w -O3 -std=gnu++17 PATH/main.c -o PATH/main
+# GCC & G++ run
 judge.Crun=PATH/main
 judge.Javaword=javac PATH/Main.java
 judge.Javarun=java -classpath PATH Main
