添加C#的编译器

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,17 +13,22 @@ judge.judgePath=/tmp/OnlineJudgeWorkspace
 judge.GNUC11=gcc -lm -w -O3 -std=gnu11 PATH/main.c -o PATH/main
 judge.GNUC99=gcc -lm -w -O3 -std=gnu99 PATH/main.c -o PATH/main
 judge.GNUC90=gcc -lm -w -O3 -std=gnu11 PATH/main.c -o PATH/main
+judge.Crun=PATH/main
 # G++
 judge.GNUCPP98=g++ -lm -w -O3 -std=gnu++98 PATH/main.c -o PATH/main
 judge.GNUCPP11=g++ -lm -w -O3 -std=gnu++11 PATH/main.c -o PATH/main
 judge.GNUCPP14=g++ -lm -w -O3 -std=gnu++14 PATH/main.c -o PATH/main
 judge.GNUCPP17=g++ -lm -w -O3 -std=gnu++17 PATH/main.c -o PATH/main
-# GCC & G++ run
-judge.Crun=PATH/main
+# java compiler
 judge.Javaword=javac PATH/Main.java
 judge.Javarun=java -classpath PATH Main
+# python compiler
 judge.Python2word=python2 -m py_compile PATH/main.py
-judge.Python2run=python2 PATH/main.py
 judge.Python3word=python3 -m py_compile PATH/main.py
+judge.Python2run=python2 PATH/main.py
 judge.Python3run=python3 PATH/main.py
+#node run
 judge.JSrun=node PATH/main.js
+# C# compiler
+judge.MonoWord=mcs PATH/main.cs
+judge.MonoRun=mono PATH/main.exe
