--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,6 @@ judge.JSrun=node PATH/main.js
 # C# compiler
 judge.MonoWord=mcs PATH/main.cs
 judge.MonoRun=mono PATH/main.exe
+# go compiler
+judge.GoWord=go build -o PATH/main.go PATH/main
+judge.GoRun=PATH/main
