--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,6 @@ judge.MonoRun=mono PATH/main.exe
 # go compiler
 judge.GoWord=go build -o PATH/main.go PATH/main
 judge.GoRun=PATH/main
+# ruby compiler
+judge.RubyWord=ruby -c PATH/main.rb
+judge.RubyRun=ruby PATH/main.rb
