更新文件地址

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,12 @@
 #eureka.instance.lease-renewal-interval-in-seconds=5
 #eureka.client.serviceUrl.defaultZone=http://192.168.0.116/eureka/eureka/
 # judge script path
-judge.scriptPath=/home/kelab/judge.py
+judge.scriptPath=/root/judge.py
 # workspace
 judge.judgePath=/tmp/OnlineJudgeWorkspace
 # testDataUrl
 judge.testDataPwd=123
-judge.testDataUrl=http://192.168.0.201:8080/test?password=${judge.testDataPwd}&problemId={ProId}
+judge.testDataUrl=http://acm.swust.edu.cn/test?password=${judge.testDataPwd}&problemId={ProId}
 judge.download=wget ${judge.testDataUrl} -O PATH/main.zip
 # GCC
 judge.GNUC11=gcc -lm -w -O3 -std=gnu11 PATH/main.c -o PATH/main
