修改架构为消费者-生产者模式

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,19 @@
-# server information
-#spring.application.name=judge-provider
-#server.port=8080
-#eureka.instance.hostname=192.168.0.113
-#eureka.instance.lease-expiration-duration-in-seconds=5
-#eureka.instance.lease-renewal-interval-in-seconds=5
-#eureka.client.serviceUrl.defaultZone=http://192.168.0.116/eureka/eureka/
+# kafka configuration
+spring.kafka.bootstrap-servers=192.168.0.112:9092
+spring.kafka.producer.retries=0
+spring.kafka.producer.batch-size=16384
+spring.kafka.producer.buffer-memory=33554432
+# encoding
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+# consumer
+spring.kafka.consumer.group-id=1
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto-commit-interval=1000ms
+# encoding
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
 # judge script path
 judge.scriptPath=/root/judge.py
 # workspace
