--- a/consumer/src/main/resources/application.properties
+++ b/consumer/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.kafka.consumer.auto-offset-reset=latest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
+# security config
+judge.sensitive-key=fork,system,popen,<sys/ptrace.h>,<sys/wait.h>,<sys/time.h>,Runtime,Popen,subprocess,getstatusoutput(,getoutput(,pbs,apt-get
 # judge script path
 judge.scriptPath=/root/judge.py
 # workspace
