更新敏感词验证

--- a/consumer/src/main/resources/application.properties
+++ b/consumer/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 # security config
-judge.sensitive-key=fork,system,popen,<sys/ptrace.h>,<sys/wait.h>,<sys/time.h>,Runtime,Popen,subprocess,getstatusoutput(,getoutput(,pbs,apt-get
+judge.sensitive-key=fork,system,popen,exec,<sys/ptrace.h>,<sys/wait.h>,<sys/time.h>,Runtime,Popen,subprocess,getstatusoutput(,getoutput(,pbs,apt-get
 # judge script path
 judge.scriptPath=/root/judge.py
 # workspace
