--- a/producer/src/main/resources/log4j.properties
+++ b/producer/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 ### 设置###
-log4j.rootLogger=info,stdout
+log4j.rootLogger=info,stdout,I,D,E
 ##### 输出信息到控制抬 ###
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target = System.out
