--- a/consumer/src/main/resources/application.properties
+++ b/consumer/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.S
 # security config
 judge.sensitive-key=fork,system,popen,exec,<sys/ptrace.h>,<sys/wait.h>,<sys/time.h>,Runtime,Popen,subprocess,getstatusoutput,getoutput,pbs,apt-get
 # judge script path
-judge.scriptPath=/root/judge.py
+judge.scriptPath=/home/hadoop/judge/test/judge
 # workspace
 judge.judgePath=/tmp/OnlineJudgeWorkspace
 # testDataUrl
@@ -24,7 +24,7 @@ judge.download=wget ${judge.testDataUrl} -O PATH/main.zip
 # GCC
 judge.GNUC11=gcc -lm -w -O3 -std=gnu11 PATH/main.c -o PATH/main
 judge.GNUC99=gcc -lm -w -O3 -std=gnu99 PATH/main.c -o PATH/main
-judge.GNUC90=gcc -lm -w -O3 -std=gnu11 PATH/main.c -o PATH/main
+judge.GNUC90=gcc -lm -w -O3 -std=gnu90 PATH/main.c -o PATH/main
 judge.Crun=PATH/main
 # G++
 judge.GNUCPP98=g++ -lm -w -O3 -std=gnu++98 PATH/main.c -o PATH/main
