--- a/consumer/src/main/resources/application.properties
+++ b/consumer/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.kafka.consumer.group-id=1
 spring.kafka.consumer.auto-commit-interval-ms=1000
 spring.kafka.consumer.enable-auto-commit=false
 spring.kafka.consumer.auto-offset-reset=latest
+spring.kafka.consumer.max.poll.records=5
+spring.kafka.consumer.max.poll.interval.ms=300000
+spring.kafka.consumer.session.timeout.ms=10000
 # encoding
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
