--- a/consumer/src/main/resources/application.properties
+++ b/consumer/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.servlet.context-path=/Consumer
-server.port=8080
+server.port=8082
 # kafka configuration
-spring.kafka.bootstrap-servers=192.168.0.115:9092
+spring.kafka.bootstrap-servers=202.115.161.211:19092
 # consumer
 spring.kafka.consumer.group-id=1
 spring.kafka.consumer.auto-commit-interval-ms=1000
@@ -17,12 +17,12 @@ spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.S
 # security config
 judge.sensitive-key=fork,system,popen,exec,<sys/ptrace.h>,<sys/wait.h>,<sys/time.h>,Runtime,Popen,subprocess,getstatusoutput,getoutput,pbs,apt-get
 # judge script path
-judge.scriptPath=/home/hadoop/judge/test/judge
+judge.scriptPath=/judge
 # workspace
 judge.judgePath=/tmp/OnlineJudgeWorkspace
 # testDataUrl
-judge.testDataPwd=123
-judge.testDataUrl=http://acm.swust.edu.cn/test?password=${judge.testDataPwd}&problemId={ProId}
+judge.testDataPwd=ok1293983411faasdf
+judge.testDataUrl=http://acm.swust.edu.cn/API/testdata/download.do?key=${judge.testDataPwd}&problemId={ProId}
 judge.download=wget ${judge.testDataUrl} -O PATH/main.zip
 # GCC
 judge.GNUC11=gcc -lm -w -O3 -std=gnu11 PATH/main.c -o PATH/main
