fix: 修改golang编译选项的bug

--- a/consumer/src/main/resources/application.properties
+++ b/consumer/src/main/resources/application.properties
@@ -48,7 +48,7 @@ judge.JSrun=node PATH/main.js
 judge.MonoWord=mcs PATH/main.cs
 judge.MonoRun=mono PATH/main.exe
 # go compiler
-judge.GoWord=go build -o PATH/main.go PATH/main
+judge.GoWord=go build -o PATH/main PATH/main.go
 judge.GoRun=PATH/main
 # ruby compiler
 judge.RubyWord=ruby -c PATH/main.rb
